classDiagram
class User {
    +UUID id
    +String email
    +String name
    -String Password
    +Date created_at
    +Date updated_at
    +void login()
}

class Place {
    +UUID id
    +String name
    +String location
    +Float price
    +Date created_at
    +Date updated_at
    +Float calculatePrice()
}

class Review {
    +UUID id
    +int rating
    +String comment
    +Date created_at
    +Date updated_at
}

class Amenity {
    +UUID id
    +String type
    +Date created_at
    +Date updated_at
}

User "1" --> "*" Review : writes
Place "1" --> "*" Review : receives
Place "1" o-- "*" Amenity : contains
classDiagram
class User {
    +UUID id
    +String email
    +String name
    -String Password
    +Date created_at
    +Date updated_at
    +create_user()
    +edit_user()
    +delete_user()
    +void login()
}

class Place {
    +UUID id
    +String name
    +String location
    +Float price
    +Date created_at
    +Date updated_at
    +create_place()
    +edit_place()
    +delete_place()
    +Float calculatePrice()
}

class Review {
    +UUID id
    +int rating
    +String comment
    +Date created_at
    +Date updated_at
    +create_review()
    +edit_review()
    +delete_review()
}

class Amenity {
    +UUID id
    +String type
    +Date created_at
    +Date updated_at
    +create_amenity()
    +edit_amenity()
    +delete_amenity()
}

User "1" --> "*" Review : writes
Place "1" --> "*" Review : receives
Place "1" o-- "*" Amenity : contains